--- a/.github/workflows/myTest.yml
+++ b/.github/workflows/myTest.yml
@@ -11,5 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Do Something
+    - name: Checkout Main
       run: actions/checkout@v4
+
+    - name: Installing Python
+      run: actions/setup-python@5
