--- a/.github/workflows/myTest.yml
+++ b/.github/workflows/myTest.yml
@@ -15,4 +15,4 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Installing Python
-      uses: actions/setup-python@5
+      uses: actions/setup-python@v5
