--- a/.github/workflows/myTest.yml
+++ b/.github/workflows/myTest.yml
@@ -18,3 +18,11 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.x'
+
+    - name: Installing Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run PyTest
+      run: pytest
