--- a/.github/workflows/myTest.yml
+++ b/.github/workflows/myTest.yml
@@ -4,7 +4,7 @@ run-name: ${{github.actor}} is learning GitHub Actions
 
 on:
   push: 
-    branches: [main]
+    branches: [Deploy]
 
 jobs:
   build:
